src/objects/PartnerProductOLD__e.object
<CustomObject>
    <description>Platform event published when a Partner Product is created, updated, deleted or undeleted</description>
    <fields>
        <fullName>EventType__c</fullName>
        <description>The type of event which generated the event. It may be: Insert, Update, Delete, Undelete</description>
        <label>EventType</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>The Id of the record published</description>
        <label>RecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>The name of the record-type of the record published</description>
        <label>RecordType</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Partner ProductOLD</label>
    <pluralLabel>Partner ProductsOLD</pluralLabel>
</CustomObject>